# screenpipe

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE.md  PIPE_PERMISSIONS_PLAN.md  README-ja.md  README-zh_CN.md  README.md  TESTING.md  VISION.md  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/long-running-agent/: SKILL.md
.claude/skills/release/: SKILL.md
.github/scripts/: install_dependencies.sh
.github/scripts/e2e/: test-lifecycle.ts
.github/workflows/: benchmark.yml  ci.yml  debug-macos-m1-ssh.yml  debug-macos-m1.yml  e2e-macos.yml  e2e-test.yml  e2e-windows.yml  release-app.yml  release-cli.yml  release-enterprise-windows.yml  release-mcp.yml  sentry-cleanup.yml  style.yml  test-signing.yml  test-windows.yml  windows-integration-test.yml  windows-longevity-test.yml
.next/: trace  trace-build
apps/screenpipe-app-tauri/: .gitignore  package.json  tsconfig.json
apps/screenpipe-app-tauri/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
crates/screenpipe-a11y/: Cargo.toml
crates/screenpipe-apple-intelligence/: Cargo.toml  build.rs
crates/screenpipe-audio/: Cargo.toml  build.rs
crates/screenpipe-config/: Cargo.toml
crates/screenpipe-config/src/: defaults.rs  lib.rs  persistence.rs  recording.rs
crates/screenpipe-connect/: Cargo.toml
crates/screenpipe-core/: Cargo.toml
crates/screenpipe-db/: Cargo.toml
crates/screenpipe-engine/: Cargo.toml  build.rs
crates/screenpipe-integrations/: Cargo.toml
crates/screenpipe-screen/: Cargo.toml
crates/screenpipe-server/: Cargo.toml
crates/screenpipe-vault/: Cargo.toml
crates/screenpipe-vault/src/: crypto.rs  error.rs  lib.rs  manager.rs  migration.rs
ee/: LICENSE  README.md
ee/desktop/: index.ts
pipes/search/: eslint.config.mjs
screenpipe-core/src/: pipes.rs
supabase/migrations/: 20260313000000_create_pipe_registry.sql
(+601 files in other folders)
