[package]
name = "screenpipe-config"
version.workspace = true
authors.workspace = true
description = "Shared recording configuration for screenpipe (app, CLI, and engine)"
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
sysinfo = "0.29"
specta = { version = "=2.0.0-rc.20", features = ["derive"], optional = true }

[features]
default = []
specta = ["dep:specta"]

[dev-dependencies]
serde_json = "1"
tempfile = "3"
