[package]
name = "screenpipe-vault"
version.workspace = true
authors.workspace = true
description = "Vault encryption for screenpipe data at rest"
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# Crypto
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"

# Async
tokio = { workspace = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Logging
tracing = { workspace = true }

# File walking
walkdir = "2"

# OS keychain
keyring = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
keychain = ["dep:keyring"]
